--- a/v3.0.9/Dockerfile
+++ b/v3.0.9/Dockerfile
@@ -2,14 +2,10 @@ FROM ubuntu:xenial
 
 MAINTAINER Rex Tsai <rex.cc.tsai@gmail.com>
 
-ENV DEBIAN_FRONTEND noninteractive
+ENV DEBIAN_FRONTEND=noninteractive
 RUN sed -e s%http://archive.ubuntu.com/ubuntu/%mirror://mirrors.ubuntu.com/mirrors.txt% -i /etc/apt/sources.list \
         && apt-get update \
         && apt-get dist-upgrade -y \
-        && apt-get install -y vim
-
-RUN sed -e s%http://archive.ubuntu.com/ubuntu/%mirror://mirrors.ubuntu.com/mirrors.txt% -i /etc/apt/sources.list \
-        && apt-get update \
         && apt-get install -y vim
 
 ENV MAPNIK_VERSION=3.0.9+ds-1 \
