--- a/v3.0.9/Dockerfile
+++ b/v3.0.9/Dockerfile
@@ -11,5 +11,10 @@ RUN sed -e s%http://archive.ubuntu.com/ubuntu/%mirror://mirrors.ubuntu.com/mirro
 ENV MAPNIK_VERSION=3.0.9+ds-1 \
     PYTHON_MAPNIK_VERSION=1:0.0~20151125-92e79d2-1build1
 
-RUN apt-get install -y libmapnik3.0=${MAPNIK_VERSION} mapnik-utils=${MAPNIK_VERSION} python-mapnik=${PYTHON_MAPNIK_VERSION} python3-mapnik=${PYTHON_MAPNIK_VERSION} \
+RUN apt-get install -y \
+        libmapnik3.0=${MAPNIK_VERSION} \
+        libmapnik-dev=${MAPNIK_VERSION} \
+        mapnik-utils=${MAPNIK_VERSION} \
+        python-mapnik=${PYTHON_MAPNIK_VERSION} \
+        python3-mapnik=${PYTHON_MAPNIK_VERSION} \
         && rm -rf /var/lib/apt/lists/*
