--- a/v3.0.9/Dockerfile
+++ b/v3.0.9/Dockerfile
@@ -5,7 +5,8 @@ ENV MAPNIK_VERSION=3.0.9+ds-1 \
     PYTHON_MAPNIK_VERSION=1:0.0~20151125-92e79d2-1build1
 
 # Verify that Mapnik has been installed correctly
-RUN apt-get install -y \
+RUN apt-get update \
+ && apt-get install -y \
             libmapnik3.0=${MAPNIK_VERSION} \
             libmapnik-dev=${MAPNIK_VERSION} \
             mapnik-utils=${MAPNIK_VERSION} \
